[package]
name = "fftviz"
version = "0.2.0"
edition = "2021"
authors = ["Gursimar Singh <gursi26.dev@gmail.com>"]
license = "MIT"
description = "A lightweight, customizable FFT visualizer for audio files"
readme = "README.md"
homepage = "https://github.com/gursi26/fftviz"
repository = "https://github.com/gursi26/fftviz"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
bevy = "0.13.0"
bevy_egui = "0.25.0"
bincode = "1.3.3"
clap = { version = "4.5.0", features = ["derive"] }
microfft = "0.5.1"
rayon = "1.9.0"
rodio = "0.17.3"
serde = { version = "1.0.197", features = ["derive"] }
spectrum-analyzer = "1.5.0"

# [profile.release]
# lto = true
# opt-level = 3
# codegen-units = 1
# incremental = false

