[package]
name = "fftviz"
version = "0.3.3"
edition = "2021"
authors = ["Gursimar Singh <gursi26.dev@gmail.com>"]
license = "MIT"
description = "A lightweight, customizable FFT visualizer for audio files"
readme = "README.md"
homepage = "https://github.com/gursi26/fftviz"
repository = "https://github.com/gursi26/fftviz"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
# Rendering stuff
bevy = "0.13.0"
bevy_egui = "0.25.0"

# Audio playback and FFT computation
rodio = "0.17.3"
spectrum-analyzer = "1.5.0"

# CLI argument parsing
clap = { version = "4.5.0", features = ["derive"] }

# Utilities
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
bincode = "1.3.3"
stopwatch = "0.0.7"
dirs = "5.0.1"

[profile.release]
strip = true  
opt-level = 3
# lto = true
# codegen-units = 1
# incremental = false

